Fixed Sponsors Page Spacing

--- a/static/styles/sponsors.sass
+++ b/static/styles/sponsors.sass
@@ -2,8 +2,9 @@
   display: flex
   flex-flow: wrap row
   align-items: center
-  justify-content: space-around
-  max-width: 70rem
+  justify-content: center
+  width: 100%
+  height: 100%
   .sponsor
     background-color: black
     background-repeat: no-repeat
